--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
+    <title>Cryptid Companion</title>
   </head>
-  <body>
+  <body class="bg-emerald-600">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="m-4 p-2 bg-emerald-50 rounded-lg">
+      <div id="root" class="flex flex-col items-center"></div>
+    </div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
