Fixed the meta tag not being closed

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>Cryptid Companion</title>
 
-    <meta name="description" content="Cryptid Companion is a simple website to
+    <meta
+      name="description"
+      content="Cryptid Companion is a simple website to
     help you play the board game Cryptid. You can mark off clues you've ruled
     out instead of keeping it all in your head!"
+    />
   </head>
   <body class="bg-emerald-600">
     <noscript>You need to enable JavaScript to run this app.</noscript>
