Added a GoatCounter tracking script

--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
     </div>
 
     <script src="/src/index.tsx" type="module"></script>
+
+    <script
+      data-goatcounter="https://cryptid.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
   </body>
 </html>
