Color the whole page background based on the selected player

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     out instead of keeping it all in your head!"
     />
   </head>
-  <body class="bg-emerald-600">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="m-4 p-2 bg-emerald-50 rounded-lg">
-      <div id="root" class="flex flex-col items-center"></div>
-    </div>
+    <div id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
 
