--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
     <meta
       name="description"
-      content="Cryptid Companion is a simple website to
-    help you play the board game Cryptid. You can mark off clues you've ruled
-    out instead of keeping it all in your head!"
+      content="Cryptid Companion is a helper for the board game Cryptid. Mark off clues you've ruled out instead of keeping it all in your head!"
     />
   </head>
   <body>
